# prueba_dtbrt

./: docker-compose.yml  main.py  pyproject.toml  requirements.txt
.docker/: dockerfile
resources/: PSO20220223.csv  PSO20220223_datos_esperados.csv
