[tool.poetry]
name = "prueba-dtbrt"
version = "0.1.0"
description = ""
authors = ["Daniel Andrés <Daniel.Andres.dev@gmail.com>"]
readme = "README.md"
packages = [{include = "prueba_dtbrt"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.2"
xlrd = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
